--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Lost and Found Recovery System</title>
 </head>
 <body>
-    
+    <section class="header">
+        
+    </section>
 </body>
 </html>
