finishing the navbar

--- a/index.html
+++ b/index.html
@@ -5,10 +5,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lost and Found Recovery System</title>
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="shortcut icon" href="./assets/images/A8yb0MXz6DhFthUyEMO-1LCYZbezs2gODqyvUrxbWn0S2sh5.png" type="image/x-icon">
 </head>
 <body>
     <section class="header">
-        
+        <header>
+            <h2>
+                <span>Lost </span>
+                <span>&</span>
+                <span>Found</span>
+            </h2>
+            <nav>
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li class="dropdown">
+                        Lost and Found
+                        <div class="dropdown-content">
+                          <a href="#">ID</a>
+                          <a href="#">Licence</a>
+                          <a href="#">Debit Cards</a>
+                          <a href="#">NHIF</a>
+                        </div>
+                    </li>
+                    <li><a href="">About Us</a></li>
+                    <li><a href="">Contact US</a></li>
+                    <button><li><a href="">Login</a></li>
+                    <button><li><a href="">Register</a></li></button>
+                </ul>
+            </nav>  
+        </header>        
+    </section>
+
+    <section class="maincontent">
+
     </section>
 </body>
 </html>
