pushing the id aboutus and contact pages

--- a/assets/pages/aboutus.html
+++ b/assets/pages/aboutus.html
@@ -4,9 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/aboutus.css">
     <title>About Us</title>
 </head>
 <body>
-    
+    <div class="us">
+
+    </div>
+    <div class="container">
+        <div class="images">
+            <img src="../images/lost2.webp" alt="lostDocuments">
+        </div>
+        <div class="aboutus"> 
+            <h2>Who are we!</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Amet porro 
+                ipsum laudantium dolorum asperiores non, veritatis quae! Reiciendis minima corporis, 
+                iure voluptatibus odit at perspiciatis.
+                 Tenetur neque id tempora repudiandae.</p>
+                 <button>Learn More</button>
+        </div>
+    </div>
 </body>
 </html>
