changing the color of the dropdown menu text

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             <nav>
                 <ul>
                     <li><a href="">Home</a></li>
-                    <li class="dropdown">
-                        Lost and Found
+                    <li class="dropdown"><span id="dropd">
+                        Lost and Found</span>
                         <div class="dropdown-content">
                           <a href="#">ID</a>
                           <a href="#">Licence</a>
