change the login header

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                     </li>
                     <li><a href="">About Us</a></li>
                     <li><a href="">Contact US</a></li>
-                    <button><li><a href="">Login</a></li>
-                    <button><li><a href="">Register</a></li></button>
+                    <button><li><a href="./assets/pages/login.html">Login</a></li>
+                    <button><li><a href="./assets/pages/signup.html">Register</a></li></button>
                 </ul>
             </nav>  
         </header>        
