--- a/assets/pages/login.html
+++ b/assets/pages/login.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Signup</h1>
+        <h1>Login</h1>
         <p id="error-txt">All input Fields are required</p>
         <form action="">
            <div class="contacts">
