It will link the id page aboutus page annd the contactus page

--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
                     <li class="dropdown">
                         Lost and Found
                         <div class="dropdown-content">
-                          <a href="#">ID</a>
+                          <a href="./assets/pages/id.html">ID</a>
                           <a href="#">Licence</a>
                           <a href="#">Debit Cards</a>
                           <a href="#">NHIF</a>
                         </div>
                     </li>
-                    <li><a href="">About Us</a></li>
-                    <li><a href="">Contact US</a></li>
+                    <li><a href="./assets/pages/aboutus.html">About Us</a></li>
+                    <li><a href="./assets/pages/contactus.html">Contact US</a></li>
                     <button><li><a href="">Login</a></li>
                     <button><li><a href="">Register</a></li></button>
                 </ul>
