--- a/assets/pages/id.html
+++ b/assets/pages/id.html
@@ -5,12 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/id.css">
+    <link rel="stylesheet" href="../css/style.css">
     <title>IdentityCards</title>
 </head>
 <body>
-    <div class="header">
-        <h2>Lost identity cards</h2>
-    </div>
+
     <div class="search">
         <input type="text" placeholder="Search..">
     </div>
