--- a/assets/pages/id.html
+++ b/assets/pages/id.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/id.css">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="shortcut icon" href="../images/A8yb0MXz6DhFthUyEMO-1LCYZbezs2gODqyvUrxbWn0S2sh5.png" type="image/x-icon">
     <title>IdentityCards</title>
 </head>
 <body>
@@ -21,7 +22,7 @@
                 <label>ID number:</label>
                 <p>Description:</p> 
             </div>
-            <button>Claim</button>
+            <button><a href="">Claim</a></button>
         </div>
         <div class="identity">
             <img src="../images/id.jpeg" alt="idImg">
@@ -30,7 +31,7 @@
                 <label>ID number:</label>
                 <p>Description:</p>
             </div>
-            <button>Claim</button>
+            <button><a href="">Claim</a></button>
         </div>
         <div class="identity">
             <img src="../images/id.jpeg" alt="idImg">
@@ -39,7 +40,7 @@
                 <label>ID number:</label>
                 <p>Description:</p>
             </div>
-            <button>Claim</button>
+            <button><a href="">Claim</a></button>
         </div>
         <div class="identity">
             <img src="../images/id.jpeg" alt="idImg">
@@ -48,7 +49,7 @@
                 <label>ID number:</label>
                 <p>Description:</p>
             </div>
-            <button>Claim</button>
+            <button><a href="">Claim</a></button>
         </div>
 
         <div class="identity">
@@ -58,7 +59,7 @@
                 <label>ID number:</label>
                 <p>Description:</p>
             </div>
-            <button>Claim</button>
+            <button><a href="">Claim</a></button>
         </div>
 
         <div class="identity">
@@ -68,7 +69,7 @@
                 <label>ID number:</label>
                 <p>Description:</p>
             </div>
-            <button>Claim</button>
+            <button><a href="">Claim</a></button>
         </div>
         <div class="identity">
             <img src="../images/id.jpeg" alt="idImg">
@@ -77,7 +78,7 @@
                 <label>ID number:</label>
                 <p>Description:</p>
             </div>
-            <button>Claim</button>
+            <button><a href="">Claim</a></button>
         </div>
         <div class="identity">
             <img src="../images/id.jpeg" alt="idImg">
@@ -86,16 +87,16 @@
                 <label>ID number:</label>
                 <p>Description:</p>
             </div>
-            <button>Claim</button>
+            <button><a href="">Claim</a></button>
         </div>
-                <div class="identity">
+        <div class="identity">
             <img src="../images/id.jpeg" alt="idImg">
             <div class="description">
                 <label>Name:</label>
                 <label>ID number:</label>
                 <p>Description:</p>
             </div>
-            <button>Claim</button>
+            <button><a href="">Claim</a></button>
         </div>
     </section>
 </body>
