It will add nav menu to identity page and licence page

--- a/assets/pages/licence.html
+++ b/assets/pages/licence.html
@@ -27,7 +27,7 @@
 
     </div>
     <div class="identity">
-        <h1>Identity Cards</h1>
+        <h1>Driver Licence</h1>
 
     </div>
 
@@ -36,84 +36,84 @@
     </div>
     <section class="container">
             <div class="identity">
-                <img src="../images/idd.jpeg" alt="idImg">
+                <img src="../images/drivel.png" alt="idImg">
                 <div class="description" id="des">
-                    <label id="name" >Name:</label><br><br>
-                    <label id="name">ID number:</label><br><br>
-                    <p>Description:</p> 
+                    <label>Name:</label><br><br>
+                    <label>licence number:</label><br><br>
+                    <p>Description:</p>
                 </div>
                 <button type="submit" onclick="check()" >Claim</button>
             </div>
         <div class="identity">
-            <img src="../images/idd.jpeg" alt="idImg">
+            <img src="../images/drivel.png" alt="idImg">
             <div class="description">
                 <label>Name:</label><br><br>
-                <label>ID number:</label><br><br>
+                <label>licence number:</label><br><br>
                 <p>Description:</p>
             </div>
             <button onclick="check()">Claim </button>
         </div>
         <div class="identity">
-            <img src="../images/idd.jpeg" alt="idImg">
+            <img src="../images/drivel.png" alt="idImg">
             <div class="description" id="details">
                 <label>Name:</label><br><br>
-                <label>ID number:</label><br><br>
+                <label>licence number:</label><br><br>
                 <p>Description:</p>
             </div>
             <button onclick="check()" >Claim</button>
         </div>
         <div class="identity">
-            <img src="../images/idd.jpeg" alt="idImg">
+            <img src="../images/drivel.png" alt="idImg">
             <div class="description">
                 <label>Name:</label><br><br>
-                <label>ID number:</label><br><br>
+                <label>licence number:</label><br><br>
                 <p>Description:</p>
             </div>
             <button onclick="check()">Claim</button>
         </div>
 
         <div class="identity">
-            <img src="../images/idd.jpeg" alt="idImg">
+            <img src="../images/drivel.png" alt="idImg">
             <div class="description">
                 <label>Name:</label><br><br>
-                <label>ID number:</label><br><br>
+                <label>licence number:</label><br><br>
                 <p>Description:</p>
             </div>
             <button onclick="check()">Claim</button>
         </div>
 
         <div class="identity">
-            <img src="../images/idd.jpeg" alt="idImg">
+            <img src="../images/drivel.png" alt="idImg">
             <div class="description">
                 <label>Name:</label><br><br>
-                <label>ID number:</label><br><br>
+                <label>licence number:</label><br><br>
                 <p>Description:</p>
             </div>
             <button onclick="check()">Claim</button>
         </div>
         <div class="identity">
-            <img src="../images/idd.jpeg" alt="idImg">
+            <img src="../images/drivel.png" alt="idImg">
             <div class="description">
                 <label>Name:</label><br><br>
-                <label>ID number:</label><br><br>
+                <label>licence number:</label><br><br>
                 <p>Description:</p>
             </div>
             <button onclick="check()">Claim</button>
         </div>
         <div class="identity">
-            <img src="../images/idd.jpeg" alt="idImg">
+            <img src="../images/drivel.png" alt="idImg">
             <div class="description">
                 <label>Name:</label><br><br>
-                <label>ID number:</label><br><br>
+                <label>licence number:</label><br><br>
                 <p>Description:</p>
             </div>
             <button onclick="check()">Claim</button>
         </div>
         <div class="identity">
-            <img src="../images/idd.jpeg" alt="idImg">
+            <img src="../images/drivel.png" alt="idImg">
             <div class="description">
                 <label>Name:</label><br><br>
-                <label>ID number:</label><br><br>
+                <label>licence number:</label><br><br>
                 <p>Description:</p>
             </div>
             <button onclick="check()">Claim</button>
