It will add footer to the id page and change the background color

--- a/assets/pages/aboutus.html
+++ b/assets/pages/aboutus.html
@@ -5,10 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/aboutus.css">
+    <link rel="stylesheet" href="../css/style.css">
     <title>About Us</title>
     <script src="../js/learnmore.js"></script>
 </head>
 <body>
+    <div class="nav">
+        <h2>
+            <span>Lost </span>
+            <span>&</span>
+            <span>Found</span>
+        </h2>
+        <nav>
+            <ul>
+                <li><a href="../../index.html">Home</a></li>
+                <li><a href="../../index.html">Lost & Found</a></li>
+                <li><a href="../pages/aboutus.html">About Us</a></li>
+                <li><a href="../pages/contactus.html">Contact Us</a></li>
+            </ul>
+        </nav>
+
+    </div>
 
     <div class="container">
         <div class="images">
@@ -21,5 +38,31 @@
             <button name="learnmore" class="btn-learnmore" onclick="myFunction()" id="myBtn">Learn more</button>
         </div>
     </div>
+
+    <footer>
+        <div class="title-text">
+            <p>CONTACT</p>
+            <h1>Visit Shop Today</h1>
+        </div>
+        <div class="footer-row">
+            <div class="footer-left">
+                <h1>Opening Hours</h1>
+                <p><i class="fa fa-clock-o"></i> Monday to Friday - 8am to 5pm</p>
+            </div>
+            <div class="footer-right">
+                <h1>Get In Touch</h1>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.790610041559!2d36.782418014158296!3d-1.300486199051474!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182f1a6bf7445dc1%3A0x940b62a3c8efde4c!2sMoringa%20School!5e0!3m2!1sen!2ske!4v1652775882871!5m2!1sen!2ske" width="200" height="150" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <p><a href="./assets/pages/contactus.html">Email Us</a><i class="fa fa-envelope"></i></p>
+                <p>020-0000-1000<i class="fa fa-phone"></i></p>
+            </div>
+        </div>
+        <div class="social-links">
+            <i class="fa fa-facebook"></i>
+            <i class="fa fa-instagram"></i>
+            <i class="fa fa-twitter"></i>
+            <i class="fa fa-youtube-play"></i>
+            <p>Copyright Lost and Found Organisation Company</p>
+        </div>
+    </footer>
 </body>
 </html>
