--- a/assets/pages/contactus.html
+++ b/assets/pages/contactus.html
@@ -11,6 +11,22 @@
     <title>Contact Us</title>
 </head>
 <body>
+    <div class="nav">
+        <h2>
+            <span>Lost </span>
+            <span>&</span>
+            <span>Found</span>
+        </h2>
+        <nav>
+            <ul>
+                <li><a href="../../index.html">Home</a></li>
+                <li><a href="../../index.html">Lost & Found</a></li>
+                <li><a href="../pages/aboutus.html">About Us</a></li>
+                <li><a href="../pages/contactus.html">Contact Us</a></li>
+            </ul>
+        </nav>
+
+    </div>
     <div class="container">
         <div class="contactus">
             <h2> CONTACT US!</h2>
@@ -33,5 +49,6 @@
     
         </div>
     </div>
+    
 </body>
 </html>
