--- a/assets/pages/licence.html
+++ b/assets/pages/licence.html
@@ -129,6 +129,31 @@
             <button class="btn" type="submit" onclick="check()">submit</button>
         </form>
     </div>
+    <footer>
+        <div class="title-text">
+            <p>CONTACT</p>
+            <h1>Visit Shop Today</h1>
+        </div>
+        <div class="footer-row">
+            <div class="footer-left">
+                <h1>Opening Hours</h1>
+                <p><i class="fa fa-clock-o"></i> Monday to Friday - 8am to 5pm</p>
+            </div>
+            <div class="footer-right">
+                <h1>Get In Touch</h1>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.790610041559!2d36.782418014158296!3d-1.300486199051474!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182f1a6bf7445dc1%3A0x940b62a3c8efde4c!2sMoringa%20School!5e0!3m2!1sen!2ske!4v1652775882871!5m2!1sen!2ske" width="200" height="150" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <p><a href="./assets/pages/contactus.html">Email Us</a><i class="fa fa-envelope"></i></p>
+                <p>020-0000-1000<i class="fa fa-phone"></i></p>
+            </div>
+        </div>
+        <div class="social-links">
+            <i class="fa fa-facebook"></i>
+            <i class="fa fa-instagram"></i>
+            <i class="fa fa-twitter"></i>
+            <i class="fa fa-youtube-play"></i>
+            <p>Copyright Lost and Found Organisation Company</p>
+        </div>
+    </footer>
     <script src="../js/id.js"></script>
 
 </body>
