--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                           <a href="#">NHIF</a>
                         </div>
                     </li>
-                    <li><a href="./assets/css/aboutus.css">About Us</a></li>
+                    <li><a href="./assets/pages/aboutus.html">About Us</a></li>
                     <li><a href="./assets/pages/contactus.html">Contact US</a></li>
                     <button><li><a href="./assets/pages/login.html">Login</a></li>
                     <button><li><a href="./assets/pages/signup.html">Register</a></li></button>
