validate the login page

--- a/assets/pages/signup.html
+++ b/assets/pages/signup.html
@@ -35,7 +35,8 @@
                 <input type="password" placeholder="re-type password" id="retype">
             </div>
         </form>
-        <button id="signup-btn">Signup</button>
+        <a href=""></a>
+        <button id="signup-btn"> Signup</button>
         <div class="deets">
             <p>Already a Member? Click <span> <a href="./login.html"> here </a> </span> to login </p>
         </div>
