--- a/assets/pages/login.html
+++ b/assets/pages/login.html
@@ -13,18 +13,19 @@
         <p id="error-txt">All input Fields are required</p>
         <form action="">
            <div class="contacts">
-                <input type="Email" placeholder="Email">
+                <input type="Email" placeholder="Email" id="email">
                 <p id="email-error"> enter valid email</p>
            </div>
             <div class="passwords">
-                <input type="password" placeholder="Password">
+                <input type="password" placeholder="Password" id="pswd">
             </div>
         </form>
-        <button>Login</button>
+        <button id="login">Login</button>
         <div class="deets">
             <p>Not a Member? Click <span> <a href="./signup.html"> here </a> </span> to Signup</p>
             <p><a href="">Forgot Password</a></p>
         </div>
     </div>
+    <script src="../js/login.js"></script>
 </body>
 </html>
