It will change the fontsize and color

--- a/assets/pages/aboutus.html
+++ b/assets/pages/aboutus.html
@@ -38,6 +38,10 @@
             <button name="learnmore" class="btn-learnmore" onclick="myFunction()" id="myBtn">Learn more</button>
         </div>
     </div>
+    <div class="logo">
+        <h1>L&F</h1>
+        <p>We provide hope to those who have lost their documents</p>
+    </div>
 
     <footer>
         <div class="title-text">
