It will add js to id page

--- a/assets/pages/id.html
+++ b/assets/pages/id.html
@@ -125,7 +125,7 @@
             <input type="text" id="name" placeholder="Enter your name"><br><br>
             <input type="text" id="idno" placeholder="Enter Your Identity Card"><br><br>
             <textarea name="" id="message" cols="30" rows="10" placeholder="Brief description of your lost Document"></textarea><br><br>
-            <button class="btn" type="submit" onclick="check()">submit</button>
+            <button class="btn" id="submit" type="submit">submit</button>
         </form>
     </div>
     <footer>
