finishing up with the navbar and footer

--- a/assets/pages/aboutus.html
+++ b/assets/pages/aboutus.html
@@ -46,17 +46,17 @@
     </div>
 
     <footer>
-        <div class="title-text">
+        <div class="title-textt">
             <p>CONTACT</p>
             <h1>Visit Shop Today</h1>
         </div>
-        <div class="container">
-        <div class="sec aboutus">
-            <h2>Opening Hours</h2>
-            <p><i class="fa fa-clock-o"></i> Monday to Friday - 9am to 9pm</p> 
-        </div>
-  
-        <div class="sec contact">
+        <div class="containerr">
+            <div class="seco aboutuss">
+                <h2>Opening Hours</h2>
+                <p><i class="fa fa-clock-o"></i> Monday to Friday - 9am to 9pm</p> 
+            </div>
+
+         <div class="seco contactt">
             <h2>Contact Info</h2>
             <ul class="info">
                 <li>
@@ -72,12 +72,12 @@
                 </li>    
             </ul>
         </div> 
-        </div>
-        <div class="com-with-us">
-            <ul class="smi">
+        </div> 
+        <div class="comm-with-us">
+            <ul class="smii">
                 <li><a href=""><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
                 <li><a href=""><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                <div class="link1"><li><a href=""><i class="fa fa-instagram" aria-hidden="true"></i></a></li></div>
+                <div class="link2"><li><a href=""><i class="fa fa-instagram" aria-hidden="true"></i></a></li></div>
                 <li><a href=""><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
             </ul>
             <p>Copyright Lost and Found Organisation Company</p>
