--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                     <li><a href="./assets/pages/aboutus.html">About Us</a></li>
                     <li><a href="./assets/pages/contactus.html">Contact US</a></li>
                     <button><li><a href="./assets/pages/login.html">Login</a></li>
+                    <button class="hide"><li><a href="">Logout</a></li></button>
                     <button><li><a href="./assets/pages/signup.html">Register</a></li></button>
                 </ul>
             </nav>  
