--- a/assets/pages/login.html
+++ b/assets/pages/login.html
@@ -20,7 +20,7 @@
                 <input type="password" placeholder="Password" id="pswd">
             </div>
         </form>
-        <button id="login">Login</button>
+        <button id="login" type="submit">Login</button>
         <div class="deets">
             <p>Not a Member? Click <span> <a href="./signup.html"> here </a> </span> to Signup</p>
         </div>
