--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                     </li>
                     <li><a href="./assets/pages/aboutus.html">About Us</a></li>
                     <li><a href="./assets/pages/contactus.html">Contact US</a></li>
-                    <button><li><a href="./assets/pages/login.html">Login</a></li>
-                    <button class="hide"><li><a href="">Logout</a></li></button>
+                    <button id="login-el" class="hide"><li><a href="./assets/pages/login.html">Login</a></li>
+                    <button id="logout"><li><a href="">Logout</a></li></button>
                     <button><li><a href="./assets/pages/signup.html">Register</a></li></button>
                 </ul>
             </nav>  
@@ -81,6 +81,6 @@
             <p>Copyright Lost and Found Organisation Company</p>
         </div>
     </footer>
-
+<script src="./assets/js/index.js"></script>
 </body>
 </html>
