--- a/index.html
+++ b/index.html
@@ -103,5 +103,6 @@
             <p>Copyright Lost and Found Organisation Company</p>
         </div>
     </footer>
+    <script src="./assets/js/index.js"></script>
 </body>
 </html>
