change the logout button and homepage header/navbar

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <li><a href="./assets/pages/aboutus.html">About Us</a></li>
                     <li><a href="./assets/pages/contactus.html">Contact US</a></li>
                     <button id="login-el" class="hide"><li><a href="./assets/pages/login.html">Login</a></li>
-                    <button id="logout"><li><a href="">Logout</a></li></button>
+                    <button id="logout"><li>Logout</li></button>
                     <button><li><a href="./assets/pages/signup.html">Register</a></li></button>
                 </ul>
             </nav>  
