slide show working on it

--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
         <div class="slideshow-container">
 
             <div class="mySlides fade">
+                <img src="./assets/images/PSX_20220519_101726.jpg" style="width:100%">
+              </div>
+
+            <div class="mySlides fade">
               <img src="./assets/images/ID.png" style="width:100%">
             </div>
 
