It will add contactus page the js

--- a/assets/pages/contactus.html
+++ b/assets/pages/contactus.html
@@ -32,11 +32,11 @@
             <h2> CONTACT US!</h2>
             <P>We can help you find your lost docuuments</P>
             <form class="form">
-                <input type="text" class="input" placeholder="Your name"><br>
-                <input type="text" class="input" placeholder="Your Email"><br>
-                <textarea name="" id="" cols="30" rows="10" placeholder="Massage...."></textarea><br>
-                <span><input class="checkb" type="checkbox">  I am not a robot </span> <br>
-                <button>SEND</button>
+                <input type="text" class="input" id="name" placeholder="Your name"><br>
+                <input type="text" class="input" id="email" placeholder="Your Email"><br>
+                <textarea name="" id="message" cols="30" rows="10" placeholder="Massage...."></textarea><br>
+                <span><input class="checkb" id="check" type="checkbox">  I am not a robot </span> <br>
+                <button id="submit">SEND</button>
             </form>
         </div>
         <div class="socialinfo">
@@ -49,6 +49,7 @@
     
         </div>
     </div>
+    <script src="../js/contact.js"></script>
     
 </body>
 </html>
