--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                     </li>
                     <li><a href="./assets/pages/aboutus.html">About Us</a></li>
                     <li><a href="./assets/pages/contactus.html">Contact US</a></li>
-                    <button id="login-el" class="hide"><li><a href="./assets/pages/login.html">Login</a></li>
+                    <button id="login-el" class="hide"><li><a href="./assets/pages/login.html" id="black">Login</a></li>
                     <button id="logout"><li>Logout</li></button>
-                    <button><li><a href="./assets/pages/signup.html">Register</a></li></button>
+                    <button><li><a href="./assets/pages/signup.html" id="black">Register</a></li></button>
                 </ul>
             </nav>  
         </header>        
