--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
               <span class="dot"></span> 
               <span class="dot"></span> 
               <span class="dot"></span> 
+              <span class="dot"></span> 
             </div>
     </section>
 
