--- a/assets/pages/login.html
+++ b/assets/pages/login.html
@@ -12,6 +12,8 @@
     <div class="container">
         <h1>Login</h1>
         <p id="error-txt">All input Fields are required</p>
+        <p id="pass-error">Password not valid</p>
+        <p id="mail-error">Email not valid</p>
         <form action="">
            <div class="contacts">
                 <input type="Email" placeholder="Email" id="email">
