Changes the header section

--- a/assets/pages/contactus.html
+++ b/assets/pages/contactus.html
@@ -11,7 +11,9 @@
     <title>Contact Us</title>
 </head>
 <body>
-    <div class="nav">
+    <section class="header">
+    <!-- <div class="nav"> -->
+        <header>
         <h2>
             <span>Lost </span>
             <span>&</span>
@@ -25,6 +27,8 @@
                 <li><a href="../pages/contactus.html">Contact Us</a></li>
             </ul>
         </nav>
+    </header>
+</section>
 
     </div>
     <div class="container">
