Changes the colors and size of the top nav menus

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
             </h2>
             <nav>
                 <ul>
-                    <li><a href="">Home</a></li>
+                    <li><a href=""><b>Home</b></a></li>
                     <li class="dropdown"><span id="dropd">
-                        Lost and Found</span>
+                        <b>Lost and Found</b></span>
                         <div class="dropdown-content">
                           <a href="./assets/pages/id.html">ID</a>
                           <a href="./assets/pages/licence.html">Licence</a>
@@ -30,11 +30,11 @@
                           <a href="#">NHIF</a>
                         </div>
                     </li>
-                    <li><a href="./assets/pages/aboutus.html">About Us</a></li>
-                    <li><a href="./assets/pages/contactus.html">Contact US</a></li>
-                    <button id="login-el" class="hide"><li><a href="./assets/pages/login.html" id="black">Login</a></li>
-                    <button id="logout"><li>Logout</li></button>
-                    <button><li><a href="./assets/pages/signup.html" id="black">Register</a></li></button>
+                    <li><a href="./assets/pages/aboutus.html"><b>About Us</b></a></li>
+                    <li><a href="./assets/pages/contactus.html"><b>Contact US</b></a></li>
+                    <button id="login-el" class="hide"><li><a href="./assets/pages/login.html" id="black"><b>Login</b></a></li>
+                    <button id="logout"><li id="log"><b>Logout</b></li></button>
+                    <button><li><a href="./assets/pages/signup.html" id="black"><b>Register</b></a></li></button>
                 </ul>
             </nav>  
         </header>        
